--- a/TaxSystem/TaxSystem.csproj
+++ b/TaxSystem/TaxSystem.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Infra\TaxRules\RetierdRule.cs" />
+  </ItemGroup>
+
 </Project>
