feat: Add asset system with Tree structure pattern

--- a/TaxSystem.Test/TaxSystem.Test.csproj
+++ b/TaxSystem.Test/TaxSystem.Test.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AssetsSystem\AssetsSystem.csproj" />
     <ProjectReference Include="..\TaxSystem\TaxSystem.csproj" />
   </ItemGroup>
 
