pattern: Command pattern

--- a/TaxSystem.Test/TaxSystem.Test.csproj
+++ b/TaxSystem.Test/TaxSystem.Test.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AssetsSystem\AssetsSystem.csproj" />
+    <ProjectReference Include="..\CommandPattern\CommandPattern.csproj" />
     <ProjectReference Include="..\TaxSystem\TaxSystem.csproj" />
   </ItemGroup>
 
